# poetry-pyside-starter

./: README.md  pyproject.toml  pyrightconfig.json  scripts.py
pyside_app/: main.py
pyside_app/utils/: logging.py
pyside_app/views/: main_window.py
tests/: test_main_window.py
